Add remote theme

--- a/_config.yml
+++ b/_config.yml
@@ -16,13 +16,12 @@
 title: João Ângelo
 description: Uma fonte rápida de pesquisa para trabalhos do dia a dia.
 #baseurl: "/docs" # the subpath of your site, e.g. /blog
-url: "https://joaoangelo.com.br" # the base hostname & protocol for your site, e.g. http://example.com
+#url: "https://joaoangelo.com.br" # the base hostname & protocol for your site, e.g. http://example.com
 #logo: "/assets/images/just-the-docs.png"
+remote_theme: pmarsceill/just-the-docs
 
-permalink: pretty
-exclude: ["node_modules/", "*.gemspec", "*.gem", "Gemfile", "Gemfile.lock", "package.json", "package-lock.json",  "script/", "LICENSE.txt", "lib/", "bin/", "README.md", "Rakefile"
-, "docs/tests/"
-]
+#permalink: pretty
+exclude: ["*.gemspec", "*.gem", "Gemfile", "Gemfile.lock", "LICENSE.txt", "lib/", "bin/", "README.md", "Rakefile"]
 
 # Regression tests
 # By default, the pages in /docs/tests are excluded when the ste is built.
@@ -106,13 +105,13 @@ color_scheme: dark
 #ga_tracking: UA-2709176-10
 #ga_tracking_anonymize_ip: true # Use GDPR compliant Google Analytics settings (true/nil by default)
 
-plugins:
-  - jekyll-seo-tag
+#plugins:
+#  - jekyll-seo-tag
 
-kramdown:
-  syntax_highlighter_opts:
-    block:
-      line_numbers: false
+#kramdown:
+#  syntax_highlighter_opts:
+#    block:
+#      line_numbers: false
 
 compress_html:
   clippings: all
